@@ -1,6 +1,6 @@
 <?php
 // add a domain to a bind9 ldap db
-// $Id: bind9_add.php,v 2.27 2006-12-15 10:37:58 turbo Exp $
+// $Id: bind9_add.php,v 2.28 2006-12-15 12:41:24 turbo Exp $
 //
 // {{{ Setup session etc
 require("./include/pql_session.inc");
@@ -16,8 +16,8 @@ if($_REQUEST["domainname"]) {
 // }}}
 
 if(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'domain')) {
-	  if(!$_REQUEST["domainname"]) {
-		// {{{ action=add && type=domain && !domainname
+  if(!$_REQUEST["domainname"]) {
+	// {{{ action=add && type=domain && !domainname
 ?>
   <span class="title1"><?php echo pql_complete_constant($LANG->_('Create a DNS zone in branch %domain%'), array('domain' => $_REQUEST["domain"])); ?></span>
 
@@ -25,11 +25,21 @@ if(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'domain')) {
 
   <form action="<?=$_SERVER["PHP_SELF"]?>" method="post">
     <table cellspacing="0" cellpadding="3" border="0">
-      <th colspan="3" align="left"><?php echo pql_complete_constant($LANG->_('Add %what%'), array('what' => $LANG->_('domain to branch'))); ?>
+      <th colspan="3" align="left"><?php echo pql_complete_constant($LANG->_('Add %what%'), array('what' => $LANG->_('DNS domain to branch'))); ?>
         <tr class="<?php pql_format_table(); ?>">
           <td class="title"><?=$LANG->_('Domain name')?></td>
           <td><input type="text" name="domainname" size="40"></td>
         </tr>
+<?php	if(pql_get_define("PQL_CONF_CONTROL_USE") and $_SESSION["ADVANCED_MODE"] and $_SESSION["ALLOW_BRANCH_CREATE"]) {
+			// Only offer this if super admin - we might need write access to some other domain/branch (i.e. a domain/branch
+			// where the specific DNS domain is located)
+?>
+
+        <tr class="<?php pql_format_table(); ?>">
+          <td class="title"><?=$LANG->_('Update QLC object(s)')?></td>
+          <td><input type="checkbox" name="qlc" CHECKED>&nbsp;<?=$LANG->_('Yes')?></td>
+        </tr>
+<?php	} ?>
       </th>
     </table>
 
@@ -42,45 +52,83 @@ if(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'domain')) {
     <input type="submit" value="<?php echo "--&gt;&gt;"; ?>">
   </form>
 <?php
+// }}}
+  } else {
+	// {{{ Add bind9 zone
+	if(pql_bind9_add_zone($_pql->ldap_linkid, $_REQUEST["domain"], $_REQUEST["domainname"])) {
+	  $msg = "Successfully added domain ".$_REQUEST["domainname"];
+
+	  // {{{ Update additional domain name(s) and QLC object(s)
+	  if($_REQUEST["qlc"] and pql_get_define("PQL_CONF_CONTROL_USE")) {
+		// {{{ Fetch old (attrib) values from DB
+		unset($entry);
+		$oldvalues = pql_get_attribute($_pql->ldap_linkid, $_REQUEST["domain"], pql_get_define("PQL_ATTR_ADDITIONAL_DOMAINNAME"));
+		if($oldvalues) {
+		  if(!is_array($oldvalues))
+			$oldvalues = array($oldvalues);
+		  
+		  foreach($oldvalues as $val)
+			$entry[pql_get_define("PQL_ATTR_ADDITIONAL_DOMAINNAME")][] = $val;
+		} else
+		  // No previous values
+		  $entry[pql_get_define("PQL_ATTR_ADDITIONAL_DOMAINNAME")][] = $_REQUEST["domainname"];
 		// }}}
-      } else {
-		// {{{ Add bind9 zone
-		  if(pql_bind9_add_zone($_pql->ldap_linkid, $_REQUEST["domain"], $_REQUEST["domainname"]))
-			$msg = "Successfully added domain ".$_REQUEST["domainname"];
-		  else
-			$msg = "Failed to add domain ".$_REQUEST["domainname"];
 
-		  $url  = "domain_detail.php?rootdn=".urlencode($_REQUEST["rootdn"])."&domain=".urlencode($_REQUEST["domain"]);
-		  $url .= "&dns_domain_name=".$_REQUEST["dns_domain_name"]."&view=".$_REQUEST["view"]."&msg=".urlencode($msg);
-
-		  if(pql_get_define("PQL_CONF_DEBUG_ME"))
-			die($url);
-		  else
-			pql_header($url);
-		  // }}}
-	  }
-} elseif(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'host')) {
-	  if(!$_REQUEST["hostname"] or !$_REQUEST["record_type"] or !$_REQUEST["dest"]) {
-		  // {{{ action=add && type=host and (!hostname or !record_type or !dest)
-		  if(!$_REQUEST["submit"]) {
-			  $error_text = array();
-			  $error = false;
-			  
-			  if(!$_REQUEST["record_type"]) {
-				  $error = true;
-				  $error_text["record_type"] = $LANG->_('Record type missing');
-			  }
-			  
-			  if(!$_REQUEST["hostname"]) {
-				  $error = true;
-				  $error_text["hostname"] = $LANG->_('Hostname missing');
-			  }
-
-			  if(!$_REQUEST["dest"]) {
-				  $error = true;
-				  $error_text["dest"] = $LANG->_('Resource destination missing');
-			  }
+		if(pql_modify_attribute($_pql->ldap_linkid, $_REQUEST["domain"], '', '', $entry)) {
+		  $msg .= "<br>".pql_complete_constant($LANG->_('Successfully changed %what%'),
+											   array('what' => $LANG->_('Additional domain name')));
+		  
+		  // {{{ Update locals and/or rcptHosts
+		  $_pql_control = new pql_control($_SESSION["USER_HOST"], $_SESSION["USER_DN"], $_SESSION["USER_PASS"]);
+		  $attribs = array(pql_get_define("PQL_ATTR_LOCALS")    => pql_get_define("PQL_CONF_CONTROL_AUTOADDLOCALS", $_REQUEST["rootdn"]),
+						   pql_get_define("PQL_ATTR_RCPTHOSTS") => pql_get_define("PQL_CONF_CONTROL_AUTOADDLOCALS", $_REQUEST["rootdn"]));
+		  foreach($attribs as $attrib => $autoadd) {
+			if($autoadd)
+			  $entry = array('', $_REQUEST["domainname"]);
 		  }
+		  
+		  pql_control_update_domains($_pql_control, $_REQUEST["rootdn"], $_SESSION["USER_SEARCH_DN_CTR"], '*', $entry);
+		  // }}}
+		} else
+		  $msg .= "<br>".pql_complete_constant($LANG->_('Failed to change %what%'),
+											   array('what' => $LANG->_('Additional domain name')))
+			. ": " . ldap_error($_pql->ldap_linkid);
+	  }
+	  // }}}
+	} else
+	  $msg = "Failed to add domain ".$_REQUEST["domainname"];
+	
+	$url  = "domain_detail.php?rootdn=".urlencode($_REQUEST["rootdn"])."&domain=".urlencode($_REQUEST["domain"]);
+	$url .= "&dns_domain_name=".$_REQUEST["dns_domain_name"]."&view=".$_REQUEST["view"]."&msg=".urlencode($msg);
+	
+	if(pql_get_define("PQL_CONF_DEBUG_ME"))
+	  die($url);
+	else
+	  pql_header($url);
+// }}}
+  }
+} elseif(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'host')) {
+  if(!$_REQUEST["hostname"] or !$_REQUEST["record_type"] or !$_REQUEST["dest"]) {
+	// {{{ action=add && type=host and (!hostname or !record_type or !dest)
+	if(!$_REQUEST["submit"]) {
+	  $error_text = array();
+	  $error = false;
+	  
+	  if(!$_REQUEST["record_type"]) {
+		$error = true;
+		$error_text["record_type"] = $LANG->_('Record type missing');
+	  }
+	  
+	  if(!$_REQUEST["hostname"]) {
+		$error = true;
+		$error_text["hostname"] = $LANG->_('Hostname missing');
+	  }
+	  
+	  if(!$_REQUEST["dest"]) {
+		$error = true;
+		$error_text["dest"] = $LANG->_('Resource destination missing');
+	  }
+	}
 ?>
   <span class="title1"><?php echo pql_complete_constant($LANG->_('Add a record to domain %domain%'), array('domain' => pql_maybe_idna_decode($_REQUEST["domainname"]))); ?></span>
 
@@ -96,31 +144,31 @@ if(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'domain')) {
           <td>Destination</td>
         </tr>
 
-<?php	  if($error == true) { ?>
+<?php if($error == true) { ?>
         <tr class="<?php pql_format_table(); ?>">
           <td class="title"></td>
-<?php		if($error_text["hostname"]) { ?>
+<?php	if($error_text["hostname"]) { ?>
           <td><?php echo pql_format_error_span($error_text["hostname"]); ?></td>
-<?php		} else { ?>
+<?php	} else { ?>
           <td></td>
-<?php		}
+<?php	}
 
-			if($error_text["record_type"]) {
+		if($error_text["record_type"]) {
 ?>
           <td><?php echo pql_format_error_span($error_text["record_type"]); ?></td>
-<?php		} else { ?>
+<?php	} else { ?>
           <td></td>
-<?php		}
+<?php	}
 
-			if($error_text["dest"]) {
+		if($error_text["dest"]) {
 ?>
           <td><?php echo pql_format_error_span($error_text["dest"]); ?></td>
-<?php		} else { ?>
+<?php	} else { ?>
           <td></td>
-<?php		} ?>
+<?php	} ?>
         </tr>
 
-<?php	  } ?>
+<?php } ?>
         <tr class="<?php pql_format_table(); ?>">
           <td class="title">Host name</td>
           <td><input type="text" name="hostname" value="<?=$_REQUEST["hostname"]?>" size="15"></td>
@@ -160,80 +208,79 @@ if(($_REQUEST["action"] == 'add') and ($_REQUEST["type"] == 'domain')) {
   </form>
 <?php
 // }}}
-	  } else {
-		  // {{{ Add bind9 host
-		  if($_REQUEST["record_type"] == "ptr") {
-			// {{{ Special circumstances - it's a PTR.
-
-			// Reverse the hostname ('192.168.156.1').
-			$tmp  = split('\.', $_REQUEST["hostname"]);
-			$count = count($tmp);
-			for($i=$count-1; $i < count($tmp); $i--) {
-			  $rev .= $tmp[$i];
-			  if($tmp[$i-1])
-				$rev .= ".";
-			}
-			// rev='4.156.168.192'
-
-			// Extract the zone part from the zone/domain name ('168.192.in-addr.arpa').
-			$zone = preg_replace('/\.in-addr\.arpa/', '', $_REQUEST["domainname"]);
-			$zone = preg_replace('/\./', '\\\.', $zone, -1); // Just so that next regexp doesn't catch the dot.
-
-			// Remove the zone ('.168.192') from the reverse ('4.156.168.192') => '4.156'.
-			$host = preg_replace("/\.$zone/", '', $rev);
-
-			$entry[pql_get_define("PQL_ATTR_RELATIVEDOMAINNAME")]	= $host;
-			// }}}
-		  } else
-			$entry[pql_get_define("PQL_ATTR_RELATIVEDOMAINNAME")]	= pql_maybe_idna_encode($_REQUEST["hostname"]);
-		  $entry[pql_get_define("PQL_ATTR_ZONENAME")]			= $_REQUEST["domainname"];
-		  $entry[pql_get_define("PQL_ATTR_DNSTTL")]				= pql_bind9_get_ttl($_pql->ldap_linkid, $_REQUEST["domainname"]);
-		  switch($_REQUEST["record_type"]) {
-			case "a":
-			  $entry[pql_get_define("PQL_ATTR_ARECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
-			  break;
-			case "cname":
-			  $entry[pql_get_define("PQL_ATTR_CNAMERECORD")]	= pql_maybe_idna_encode($_REQUEST["dest"]);
-			  break;
-			case "hinfo":
-			  $entry[pql_get_define("PQL_ATTR_HINFORECORD")]	= $_REQUEST["dest"];
-			  break;
-			case "mx":
-			  $entry[pql_get_define("PQL_ATTR_MXRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
-			  break;
-			case "ns":
-			  $entry[pql_get_define("PQL_ATTR_NSRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
-			  break;
-			case "ptr":
-			  $entry[pql_get_define("PQL_ATTR_PTRRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
-			  break;
-		  }
-
-		  $dn = pql_bind9_add_host($_pql->ldap_linkid, $_REQUEST["domain"], $entry);
-		  if($dn) {
-			$msg = "Successfully added host <u>".$_REQUEST["hostname"].".".pql_maybe_idna_decode($_REQUEST["domainname"])."</u>";
-
-			if(!pql_get_define("PQL_CONF_DEBUG_ME")) {
-			  // We can't do this if we're debuging. The object don't exists in the db, hence
-			  // we can't figure out zone name etc...
-			  if(!pql_bind9_update_serial($_pql->ldap_linkid, $dn))
-				die("failed to update SOA serial number");
-			} else
-			  echo $LANG->_("\bCan't update SOA since we're running in DEBUG_ME mode!\B");
-		  } else
-			$msg = "Failed to add ".$_REQUEST["hostname"]." to ".$_REQUEST["domainname"];
-
-		  $msg = urlencode($msg);
-		  $url  = "domain_detail.php?rootdn=".$_REQUEST["rootdn"]."&domain=".$_REQUEST["domain"]."&view=".$_REQUEST["view"];
-		  $url .= "&dns_domain_name=".$_REQUEST["dns_domain_name"]."&msg=$msg";
-
-		  if(pql_get_define("PQL_CONF_DEBUG_ME")) {
-			echo "If we wheren't debugging (file ./.DEBUG_ME exists), I'd be redirecting you to the url:<br>";
-			die("<b>$url</b>");
-		  } else
-			pql_header($url);
-// }}}
+  } else {
+	// {{{ Add bind9 host
+	if($_REQUEST["record_type"] == "ptr") {
+	  // {{{ Special circumstances - it's a PTR.
+	  // Reverse the hostname ('192.168.156.1').
+	  $tmp  = split('\.', $_REQUEST["hostname"]);
+	  $count = count($tmp);
+	  for($i=$count-1; $i < count($tmp); $i--) {
+		$rev .= $tmp[$i];
+		if($tmp[$i-1])
+		  $rev .= ".";
 	  }
+	  // rev='4.156.168.192'
+	  
+	  // Extract the zone part from the zone/domain name ('168.192.in-addr.arpa').
+	  $zone = preg_replace('/\.in-addr\.arpa/', '', $_REQUEST["domainname"]);
+	  $zone = preg_replace('/\./', '\\\.', $zone, -1); // Just so that next regexp doesn't catch the dot.
+	  
+	  // Remove the zone ('.168.192') from the reverse ('4.156.168.192') => '4.156'.
+	  $host = preg_replace("/\.$zone/", '', $rev);
+	  
+	  $entry[pql_get_define("PQL_ATTR_RELATIVEDOMAINNAME")]	= $host;
+// }}}
+	} else
+	  $entry[pql_get_define("PQL_ATTR_RELATIVEDOMAINNAME")]	= pql_maybe_idna_encode($_REQUEST["hostname"]);
+	$entry[pql_get_define("PQL_ATTR_ZONENAME")]			= $_REQUEST["domainname"];
+	$entry[pql_get_define("PQL_ATTR_DNSTTL")]				= pql_bind9_get_ttl($_pql->ldap_linkid, $_REQUEST["domainname"]);
+	switch($_REQUEST["record_type"]) {
+	case "a":
+	  $entry[pql_get_define("PQL_ATTR_ARECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
+	  break;
+	case "cname":
+	  $entry[pql_get_define("PQL_ATTR_CNAMERECORD")]	= pql_maybe_idna_encode($_REQUEST["dest"]);
+	  break;
+	case "hinfo":
+	  $entry[pql_get_define("PQL_ATTR_HINFORECORD")]	= $_REQUEST["dest"];
+	  break;
+	case "mx":
+	  $entry[pql_get_define("PQL_ATTR_MXRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
+	  break;
+	case "ns":
+	  $entry[pql_get_define("PQL_ATTR_NSRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
+	  break;
+	case "ptr":
+	  $entry[pql_get_define("PQL_ATTR_PTRRECORD")]		= pql_maybe_idna_encode($_REQUEST["dest"]);
+	  break;
+	}
+	
+	$dn = pql_bind9_add_host($_pql->ldap_linkid, $_REQUEST["domain"], $entry);
+	if($dn) {
+	  $msg = "Successfully added host <u>".$_REQUEST["hostname"].".".pql_maybe_idna_decode($_REQUEST["domainname"])."</u>";
+
+	  if(!pql_get_define("PQL_CONF_DEBUG_ME")) {
+		// We can't do this if we're debuging. The object don't exists in the db, hence
+		// we can't figure out zone name etc...
+		if(!pql_bind9_update_serial($_pql->ldap_linkid, $dn))
+		  die("failed to update SOA serial number");
+	  } else
+		echo $LANG->_("\bCan't update SOA since we're running in DEBUG_ME mode!\B");
+	} else
+	  $msg = "Failed to add ".$_REQUEST["hostname"]." to ".$_REQUEST["domainname"];
+	
+	$msg = urlencode($msg);
+	$url  = "domain_detail.php?rootdn=".$_REQUEST["rootdn"]."&domain=".$_REQUEST["domain"]."&view=".$_REQUEST["view"];
+	$url .= "&dns_domain_name=".$_REQUEST["dns_domain_name"]."&msg=$msg";
+	
+	if(pql_get_define("PQL_CONF_DEBUG_ME")) {
+	  echo "If we wheren't debugging (file ./.DEBUG_ME exists), I'd be redirecting you to the url:<br>";
+	  die("<b>$url</b>");
+	} else
+	  pql_header($url);
+// }}}
+  }
 }
 ?>
 </body>
